libs/extractor/src/snapshots/extractor__tests__extract_style_props-7.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Flex} from '@devup-ui/core'\n        <Flex fontFamily='Roboto Hello'/>\n        \",\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "Roboto Hello",
                level: 0,
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"d0 d1\" />;\n",
}
