libs/extractor/src/snapshots/extractor__tests__extract_style_props_with_class_name-8.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Box as C} from '@devup-ui/core'\n        <C padding={1} \n      _hover={{\n        borderColor: true ? 'blue' : ``,\n      }}\n className={variable} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "border-color",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment78, __devupClass142) => <div className={`${__devupClass142 || \"\"} OLpadding-v4px ${__devupAssignment78?.[0] ?? \"\"}`} style={{ ...__devupAssignment78?.[1] }} />)(((__devupField0) => [\n\t__devupField0?.[0] ?? \"\",\n\t__devupField0?.[1],\n\t{ borderColor: __devupField0?.[2] }\n])(((__devupValue) => [\n\t\"OHbve0s_btthepl3x8\",\n\t{},\n\t__devupValue\n])(true ? \"blue\" : ``)), variable);\n",
}
