libs/extractor/src/snapshots/extractor__tests__extract_style_props_with_class_name-9.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box, Button as DevupButton, Center, css } from '@devup-ui/core'\nimport clsx from 'clsx'\n\n<DevupButton\n      {...props}\n      boxSizing=\"border-box\"\n      className={clsx(\n        variants[variant],\n        isError && variant === 'default' && errorClassNames,\n        className,\n      )}\n      typography={\n        isPrimary\n          ? {\n              sm: 'buttonS',\n              md: 'buttonM',\n            }[size]\n          : undefined\n      }\n    />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "box-sizing",
                value: "border-box",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Typography(
            "buttonM",
        ),
        Typography(
            "buttonS",
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\nimport clsx from \"clsx\";\n((__devupSpread0, __devupValue0, __devupBranch0) => <button {...__devupSpread0} className={`${__devupValue0 || \"\"} a ${__devupBranch0[\"0\"] ? {\n\t\"md\": \"typo-buttonM\",\n\t\"sm\": \"typo-buttonS\"\n}[__devupBranch0[\"1\"]?.[\"0\"]] || \"\" : \"\"}`} style={__devupSpread0?.style} />)({\n\t__proto__: null,\n\t...props\n}, clsx(variants[variant], isError && variant === \"default\" && errorClassNames, className), isPrimary ? [true, {\n\tsm: [\"sm\"],\n\tmd: [\"md\"]\n}[size]] : [false]);\n",
}
